--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="stylesheet" href="pages/index.css" />
     <title>Mesto</title>
   </head>
   <body>
     <div class="page">
+      <section class="popup">
+        <form class="popup__content" action="#" method="POST">
+          <button class="popup__close-button" type="button"></button>
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <fieldset class="popup__fieldset">
+            <input
+              class="popup__input popup__input_name"
+              type="text"
+              name="name"
+              value="Жак Ив-Кусто"
+              required
+            />
+            <input
+              class="popup__input popup__input_description"
+              type="text"
+              name="description"
+              value="Исследователь океана"
+              required
+            />
+          </fieldset>
+          <button class="popup__submit-button" type="submit" value="Сохранить">
+            Сохранить
+          </button>
+        </form>
+      </section>
       <header class="header">
         <img class="logo" src="pictures/logo.svg" alt="Логотип" />
       </header>
@@ -22,70 +46,73 @@
           <div class="profile__info">
             <div class="profile__info-shell">
               <h1 class="profile__name">Жак Ив-Кусто</h1>
-              <button class="edit-button"></button>
+              <button class="edit-button" type="button"></button>
             </div>
             <p class="profile__description">Исследователь океана</p>
           </div>
-          <button class="add-button"></button>
+          <button class="add-button" type="button"></button>
         </section>
         <section class="cards">
           <div class="card">
             <img
               class="card__picture"
-              src="pictures/kirill-pershin-1088404-unsplash.jpg"
-              alt="Карачаевск"
+              src="pictures/new-york.jpg"
+              alt="Палатка фастфуда"
             />
-            <h2 class="card__title">Карачаевск</h2>
-            <button class="like-button"></button>            
+            <h2 class="card__title">Нью-Йорк</h2>
+            <button class="like-button" type="button"></button>
           </div>
           <div class="card">
             <img
               class="card__picture"
-              src="pictures/kirill-pershin-1088404-unsplash.jpg"
-              alt="Карачаевск"
+              src="pictures/altay.jpg"
+              alt="Человек идущий по полевой дороге"
             />
-            <h2 class="card__title">Карачаевск</h2>
-            <button class="like-button"></button>            
+            <h2 class="card__title">Алтай</h2>
+            <button class="like-button" type="button"></button>
           </div>
           <div class="card">
             <img
               class="card__picture"
-              src="pictures/kirill-pershin-1088404-unsplash.jpg"
-              alt="Карачаевск"
+              src="pictures/brugge.jpg"
+              alt="Старинное здание"
             />
-            <h2 class="card__title">Карачаевск</h2>
-            <button class="like-button"></button>            
+            <h2 class="card__title">Брюгге</h2>
+            <button class="like-button" type="button"></button>
           </div>
           <div class="card">
             <img
               class="card__picture"
-              src="pictures/kirill-pershin-1088404-unsplash.jpg"
-              alt="Карачаевск"
+              src="pictures/msk.jpg"
+              alt="Красная площадь"
             />
-            <h2 class="card__title">Карачаевск</h2>
-            <button class="like-button"></button>            
+            <h2 class="card__title">Москва</h2>
+            <button class="like-button" type="button"></button>
           </div>
           <div class="card">
             <img
               class="card__picture"
-              src="pictures/kirill-pershin-1088404-unsplash.jpg"
-              alt="Карачаевск"
+              src="pictures/nsk.jpg"
+              alt="Театр оперы и балета"
             />
-            <h2 class="card__title">Карачаевск</h2>
-            <button class="like-button"></button>            
+            <h2 class="card__title">Новосибирск</h2>
+            <button class="like-button" type="button"></button>
           </div>
           <div class="card">
             <img
               class="card__picture"
-              src="pictures/kirill-pershin-1088404-unsplash.jpg"
-              alt="Карачаевск"
+              src="pictures/kazan.jpg"
+              alt="Мечеть Кул Шариф"
             />
-            <h2 class="card__title">Карачаевск</h2>
-            <button class="like-button"></button>            
+            <h2 class="card__title">Казань</h2>
+            <button class="like-button" type="button"></button>
           </div>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <p class="footer__copyright">&copy;2020 Березин Константин</p>
+      </footer>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
