--- a/index.html
+++ b/index.html
@@ -87,33 +87,37 @@
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
-      <section class="popup">
-        <form class="popup__content" action="#" method="POST">
-          <button class="popup__close-button" type="button"></button>
-          <h2 class="popup__title">Редактировать профиль</h2>
-          <fieldset class="popup__fieldset">
-            <input
-              class="popup__input popup__input_name"
-              type="text"
-              name="name"
-              value="Жак Ив-Кусто"
-              required
-              placeholder="Имя"
-            />
-            <input
-              class="popup__input popup__input_description"
-              type="text"
-              name="description"
-              value="Исследователь океана"
-              required
-              placeholder="О себе"
-            />
-          </fieldset>
-          <button class="popup__submit-button" type="submit" value="Сохранить">
-            Сохранить
-          </button>
-        </form>
-      </section>
+      <template id="popup-form">
+        <section class="popup popup_opened"><!--delete _opened-->
+          <form class="popup__content" action="#" method="POST">
+            <button class="popup__close-button" type="button"></button>
+            <h2 class="popup__title"></h2>
+            <fieldset class="popup__fieldset">
+              <input
+                class="popup__input popup__input_first"
+                type="text"
+                name=""
+                value=""
+                required
+                placeholder=""
+              />
+              <input
+                class="popup__input popup__input_second"
+                type="text"
+                name=""
+                value=""
+                required
+                placeholder=""
+              />
+            </fieldset>
+            <button
+              class="popup__submit-button"
+              type="submit"
+              value=""
+            ></button>
+          </form>
+        </section>
+      </template>
     </div>
     <script src="scripts/script.js"></script>
   </body>
