--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
-        <section class="cards"></section>
+        <ul class="cards"></ul>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
@@ -90,12 +90,12 @@
         </div> 
       </section>
       <template id="card">
-        <div class="card">
+        <li class="card">
           <img class="card__picture" src="" alt="Фото места" />
           <h2 class="card__title"></h2>
           <button class="card__like-button" type="button"></button>
           <button class="card__delete-button" type="button"></button>
-        </div>
+        </li>
       </template>
     </div>
     <script src="scripts/script.js"></script>
