--- a/index.html
+++ b/index.html
@@ -33,53 +33,80 @@
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
       <section class="popup popup_for_edit">
-        <form class="popup__content" action="#" method="POST">
+        <form class="popup__content" action="#" method="POST" novalidate>
           <button class="popup__close-button" type="button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <fieldset class="popup__fieldset">
             <input
+              id="input-name"
               class="popup__input popup__input_name"
               type="text"
               name="name"
               value="Жак Ив-Кусто"
               required
               placeholder="Имя"
+              pattern="[A-Za-zА-Яа-яЁё -]{2,40}"
             />
+            <span id="input-name-error" class="popup__input-error-text"
+              >Необходимо заполнить данное поле</span
+            >
             <input
+              id="input-dscr"
               class="popup__input popup__input_description"
               type="text"
               name="description"
               value="Исследователь океана"
               required
               placeholder="О себе"
+              maxlength="200"
+              minlength="2"
             />
+            <span id="input-dscr-error" class="popup__input-error-text"
+              >Необходимо заполнить данное поле</span
+            >
           </fieldset>
-          <button class="popup__submit-button" type="submit" value="">Сохранить</button>
+          <button class="popup__submit-button popup__submit-button_inactive" type="submit" value="">
+            Сохранить
+          </button>
         </form>
       </section>
       <section class="popup popup_for_add-card">
-        <form class="popup__content" action="#" method="POST">
+        <form class="popup__content" action="#" method="POST" novalidate>
           <button class="popup__close-button" type="button"></button>
           <h2 class="popup__title">Новое место</h2>
           <fieldset class="popup__fieldset">
             <input
+            id="input-place-name"
               class="popup__input popup__input_place-name"
               type="text"
               name="place_name"
               value=""
               required
               placeholder="Название"
-            />
+              minlength="1"
+              maxlength="30"
+            /><span id="input-place-name-error" class="popup__input-error-text"
+              >Необходимо заполнить данное поле</span
+            >
             <input
+            id="input-img-src" 
               class="popup__input popup__input_img-src"
               type="url"
               name="img_src"
               value=""
               required
               placeholder="Ссылка на картинку"
-            />
+            /><span id="input-img-src-error" class="popup__input-error-text"
+              >Необходимо заполнить данное поле</span
+            >
           </fieldset>
-          <button class="popup__submit-button" type="submit" value="">Создать</button>
+          <button
+            class="popup__submit-button "
+            type="submit"
+            value=""
+          >
+            Создать
+          </button>
         </form>
       </section>
       <section class="popup popup_for_image">
@@ -87,7 +114,7 @@
           <img class="popup__image" src="" alt="Фото места" />
           <p class="popup__img-title"></p>
           <button class="popup__close-button"></button>
-        </div> 
+        </div>
       </section>
       <template id="card">
         <li class="card">
@@ -99,5 +126,6 @@
       </template>
     </div>
     <script src="scripts/script.js"></script>
+    <script src="scripts/validate.js"></script>
   </body>
 </html>
