--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="pages/index.css" />
     <title>Mesto</title>
   </head>
   <body>
@@ -33,7 +32,13 @@
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
       <section class="popup popup_for_edit">
-        <form id="form_for_edit" class="popup__content" action="#" method="POST" novalidate>
+        <form
+          id="form_for_edit"
+          class="popup__content"
+          action="#"
+          method="POST"
+          novalidate
+        >
           <button class="popup__close-button" type="button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <fieldset class="popup__fieldset">
@@ -65,18 +70,28 @@
               >Необходимо заполнить данное поле</span
             >
           </fieldset>
-          <button class="popup__submit-button popup__submit-button_inactive" type="submit" value="">
+          <button
+            class="popup__submit-button popup__submit-button_inactive"
+            type="submit"
+            value=""
+          >
             Сохранить
           </button>
         </form>
       </section>
       <section class="popup popup_for_add-card">
-        <form id="form_for_add-card" class="popup__content" action="#" method="POST" novalidate>
+        <form
+          id="form_for_add-card"
+          class="popup__content"
+          action="#"
+          method="POST"
+          novalidate
+        >
           <button class="popup__close-button" type="button"></button>
           <h2 class="popup__title">Новое место</h2>
           <fieldset class="popup__fieldset">
             <input
-            id="input-place-name"
+              id="input-place-name"
               class="popup__input popup__input_place-name"
               type="text"
               name="place_name"
@@ -89,7 +104,7 @@
               >Необходимо заполнить данное поле</span
             >
             <input
-            id="input-img-src" 
+              id="input-img-src"
               class="popup__input popup__input_img-src"
               type="url"
               name="img_src"
@@ -100,33 +115,26 @@
               >Необходимо заполнить данное поле</span
             >
           </fieldset>
-          <button
-            class="popup__submit-button "
-            type="submit"
-            value=""
-          >
+          <button class="popup__submit-button" type="submit" value="">
             Создать
           </button>
         </form>
       </section>
       <section class="popup popup_for_image">
         <div class="popup__img-wrapper">
-          <img class="popup__image" src="" alt="Фото места" />
+          <img class="popup__image" src="#" alt="Фото места" />
           <p class="popup__img-title"></p>
           <button class="popup__close-button"></button>
         </div>
       </section>
       <template id="card">
         <li class="card">
-          <img class="card__picture" src="" alt="Фото места" />
+          <img class="card__picture" src="#" alt="Фото места" />
           <h2 class="card__title"></h2>
           <button class="card__like-button" type="button"></button>
           <button class="card__delete-button" type="button"></button>
         </li>
       </template>
     </div>
-    <script type="module" src="scripts/index.js"></script>
-    <script type="module" src="scripts/Card.js"></script>
-    <script type="module" src="scripts/FormValidator.js"></script>
   </body>
 </html>
