bugfix: realise remove eventlisteners

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
               id="input-dscr"
               class="popup__input popup__input_description"
               type="text"
-              name="description"
+              name="info"
               value="Исследователь океана"
               required
               placeholder="О себе"
@@ -94,7 +94,7 @@
               id="input-place-name"
               class="popup__input popup__input_place-name"
               type="text"
-              name="place_name"
+              name="placeName"
               value=""
               required
               placeholder="Название"
@@ -107,7 +107,7 @@
               id="input-img-src"
               class="popup__input popup__input_img-src"
               type="url"
-              name="img_src"
+              name="imgSrc"
               value=""
               required
               placeholder="Ссылка на картинку"
