--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,15 @@
       </header>
       <main class="content">
         <section class="profile">
-          <img
-            class="profile__avatar"
-            src="pictures/kusto.jpg"
-            alt="Аватар пользователя"
-          />
+          <div class="profile__avatar-wrapper">
+            <img class="profile__avatar" src="#" alt="Аватар пользователя" />
+          </div>
           <div class="profile__info">
             <div class="profile__info-shell">
-              <h1 class="profile__name">Жак Ив-Кусто</h1>
+              <h1 class="profile__name"></h1>
               <button class="profile__edit-button" type="button"></button>
             </div>
-            <p class="profile__description">Исследователь океана</p>
+            <p class="profile__description"></p>
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
@@ -47,7 +45,7 @@
               class="popup__input popup__input_name"
               type="text"
               name="name"
-              value="Жак Ив-Кусто"
+              value=""
               required
               placeholder="Имя"
               pattern="[A-Za-zА-Яа-яЁё -]{2,40}"
@@ -60,7 +58,7 @@
               class="popup__input popup__input_description"
               type="text"
               name="info"
-              value="Исследователь океана"
+              value=""
               required
               placeholder="О себе"
               maxlength="200"
@@ -73,7 +71,7 @@
           <button
             class="popup__submit-button popup__submit-button_inactive"
             type="submit"
-            value=""
+            value="Сохранить"
           >
             Сохранить
           </button>
@@ -94,7 +92,7 @@
               id="input-place-name"
               class="popup__input popup__input_place-name"
               type="text"
-              name="placeName"
+              name="name"
               value=""
               required
               placeholder="Название"
@@ -107,7 +105,7 @@
               id="input-img-src"
               class="popup__input popup__input_img-src"
               type="url"
-              name="imgSrc"
+              name="link"
               value=""
               required
               placeholder="Ссылка на картинку"
@@ -115,8 +113,51 @@
               >Необходимо заполнить данное поле</span
             >
           </fieldset>
-          <button class="popup__submit-button" type="submit" value="">
+          <button class="popup__submit-button" type="submit" value="Создать">
             Создать
+          </button>
+        </form>
+      </section>
+      <section class="popup popup_for_remove-card">
+        <form
+          id="form_for_remove-card"
+          class="popup__content"
+          action="#"
+          method="POST"
+          novalidate
+        >
+          <button class="popup__close-button" type="button"></button>
+          <h2 class="popup__title">Вы уверены?</h2>
+          <button class="popup__submit-button" type="submit" value="">
+            Да
+          </button>
+        </form>
+      </section>
+      <section class="popup popup_for_add-avatar">
+        <form
+          id="form_for_add-avatar"
+          class="popup__content"
+          action="#"
+          method="POST"
+          novalidate
+        >
+          <button class="popup__close-button" type="button"></button>
+          <h2 class="popup__title">Обновить аватар</h2>
+          <fieldset class="popup__fieldset">
+            <input
+              id="input-avatar-src"
+              class="popup__input popup__input_avatar-src"
+              type="url"
+              name="avatar"
+              value=""
+              required
+              placeholder="Ссылка на аватар"
+            /><span id="input-avatar-src-error" class="popup__input-error-text"
+              >Необходимо заполнить данное поле</span
+            >
+          </fieldset>
+          <button class="popup__submit-button" type="submit" value="Сохранить">
+            Сохранить
           </button>
         </form>
       </section>
@@ -131,7 +172,10 @@
         <li class="card">
           <img class="card__picture" src="#" alt="Фото места" />
           <h2 class="card__title"></h2>
-          <button class="card__like-button" type="button"></button>
+          <div class="card__like-wrapper">
+            <button class="card__like-button" type="button"></button>
+            <p class="card__likes-number">0</p>
+          </div>
           <button class="card__delete-button" type="button"></button>
         </li>
       </template>
